chore: add benchmarks

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,15 @@ documentation = "https://docs.rs/rev_lines"
 license = "MIT"
 authors = ["Michael Coyne <mjc@hey.com>"]
 keywords = ["lines", "reverse", "reader", "buffer", "iterator"]
+autobenches = false
 
 [dependencies]
 thiserror = "1.0.40"
+
+[dev-dependencies]
+iai = { git = "https://github.com/sigaloid/iai", rev = "6c83e942" }
+
+[[bench]]
+name = "iai"
+path = "benches/iai.rs"
+harness = false
